crates/kul-core/tests/snapshots/detail__empty_batch_is_an_empty_ok_result.snap
---
source: crates/kul-core/tests/detail.rs
expression: "detail_json(&check, &[])"
---
{
  "ok": true,
  "result": []
}
