crates/kul-core/tests/snapshots/detail__person_with_an_ended_marriage_and_a_later_one.snap
---
source: crates/kul-core/tests/detail.rs
expression: "detail_json(&check, &[DetailTarget::person(\"erik\")])"
---
{
  "ok": true,
  "result": [
    {
      "kind": "person",
      "person": {
        "id": "erik",
        "name": "Erik Lindqvist",
        "gender": "male",
        "born": {
          "value": "1970-01-22",
          "precision": "day",
          "circa": false
        }
      },
      "parents": [],
      "marriages": [
        {
          "marriage": {
            "id": "m_erik_astrid",
            "spouses": [
              "erik",
              "astrid"
            ],
            "start": {
              "value": "1995-06-17",
              "precision": "day",
              "circa": false
            },
            "end": {
              "value": "2003-06-15",
              "precision": "day",
              "circa": false
            },
            "endReason": "divorce"
          },
          "spouse": {
            "id": "astrid",
            "name": "Astrid Lindqvist",
            "gender": "female",
            "born": {
              "value": "1972-10-08",
              "precision": "day",
              "circa": false
            }
          }
        },
        {
          "marriage": {
            "id": "m_erik_maja",
            "spouses": [
              "erik",
              "maja"
            ],
            "start": {
              "value": "2006-08-26",
              "precision": "day",
              "circa": false
            }
          },
          "spouse": {
            "id": "maja",
            "name": "Maja Holm",
            "gender": "female",
            "born": {
              "value": "1975-05-14",
              "precision": "day",
              "circa": false
            }
          }
        }
      ],
      "children": [
        {
          "person": {
            "id": "linnea",
            "name": "Linnea Lindqvist",
            "gender": "female",
            "born": {
              "value": "1998-03-29",
              "precision": "day",
              "circa": false
            }
          },
          "link": {
            "marriageId": "m_erik_astrid",
            "childId": "linnea",
            "kind": "biological"
          }
        },
        {
          "person": {
            "id": "oskar",
            "name": "Oskar Lindqvist",
            "gender": "male",
            "born": {
              "value": "2008-12-01",
              "precision": "day",
              "circa": false
            }
          },
          "link": {
            "marriageId": "m_erik_maja",
            "childId": "oskar",
            "kind": "biological"
          }
        }
      ]
    }
  ]
}
