crates/kul-core/tests/snapshots/detail__person_with_six_parents_by_birth_plus_two_adoptions.snap
---
source: crates/kul-core/tests/detail.rs
expression: "detail_json(&check, &[DetailTarget::person(\"dalisay\")])"
---
{
  "ok": true,
  "result": [
    {
      "kind": "person",
      "person": {
        "id": "dalisay",
        "name": "Dalisay Mendoza",
        "gender": "female",
        "born": {
          "value": "1990-08-03",
          "precision": "day",
          "circa": false
        }
      },
      "parents": [
        {
          "person": {
            "id": "eduardo",
            "name": "Eduardo Reyes",
            "gender": "male",
            "born": {
              "value": "1962-03-11",
              "precision": "day",
              "circa": false
            }
          },
          "link": {
            "marriageId": "m_eduardo_luz",
            "childId": "dalisay",
            "kind": "biological"
          }
        },
        {
          "person": {
            "id": "luz",
            "name": "Luz Reyes",
            "gender": "female",
            "born": {
              "value": "1965-12-02",
              "precision": "day",
              "circa": false
            }
          },
          "link": {
            "marriageId": "m_eduardo_luz",
            "childId": "dalisay",
            "kind": "biological"
          }
        },
        {
          "person": {
            "id": "tomas",
            "name": "Tomas Garcia",
            "gender": "male",
            "born": {
              "value": "1958-06-25",
              "precision": "day",
              "circa": false
            }
          },
          "link": {
            "marriageId": "m_tomas_elena",
            "childId": "dalisay",
            "kind": "adoptive",
            "start": {
              "value": "1994-04-20",
              "precision": "day",
              "circa": false
            },
            "end": {
              "value": "1999-02-10",
              "precision": "day",
              "circa": false
            }
          }
        },
        {
          "person": {
            "id": "elena",
            "name": "Elena Garcia",
            "gender": "female",
            "born": {
              "value": "1960-10-14",
              "precision": "day",
              "circa": false
            }
          },
          "link": {
            "marriageId": "m_tomas_elena",
            "childId": "dalisay",
            "kind": "adoptive",
            "start": {
              "value": "1994-04-20",
              "precision": "day",
              "circa": false
            },
            "end": {
              "value": "1999-02-10",
              "precision": "day",
              "circa": false
            }
          }
        },
        {
          "person": {
            "id": "carlos",
            "name": "Carlos Mendoza",
            "gender": "male",
            "born": {
              "value": "1973-02-18",
              "precision": "day",
              "circa": false
            }
          },
          "link": {
            "marriageId": "m_carlos_rosa",
            "childId": "dalisay",
            "kind": "adoptive",
            "start": {
              "value": "2002-11-30",
              "precision": "day",
              "circa": false
            }
          }
        },
        {
          "person": {
            "id": "rosa",
            "name": "Rosa Mendoza",
            "gender": "female",
            "born": {
              "value": "1975-09-24",
              "precision": "day",
              "circa": false
            }
          },
          "link": {
            "marriageId": "m_carlos_rosa",
            "childId": "dalisay",
            "kind": "adoptive",
            "start": {
              "value": "2002-11-30",
              "precision": "day",
              "circa": false
            }
          }
        }
      ],
      "marriages": [],
      "children": []
    }
  ]
}
