crates/kul-core/tests/snapshots/detail__person_with_three_concurrent_marriages.snap
---
source: crates/kul-core/tests/detail.rs
expression: "detail_json(&check, &[DetailTarget::person(\"khalid\")])"
---
{
  "ok": true,
  "result": [
    {
      "kind": "person",
      "person": {
        "id": "khalid",
        "name": "Khalid Al-Rashid",
        "gender": "male",
        "born": {
          "value": "1950-03-29",
          "precision": "day",
          "circa": false
        }
      },
      "parents": [
        {
          "person": {
            "id": "omar",
            "name": "Omar Al-Rashid",
            "gender": "male",
            "born": {
              "value": "1925",
              "precision": "year",
              "circa": true
            }
          },
          "link": {
            "marriageId": "m_omar_fatima",
            "childId": "khalid",
            "kind": "biological"
          }
        },
        {
          "person": {
            "id": "fatima",
            "name": "Fatima Al-Rashid",
            "gender": "female",
            "born": {
              "value": "1928-04-02",
              "precision": "day",
              "circa": false
            }
          },
          "link": {
            "marriageId": "m_omar_fatima",
            "childId": "khalid",
            "kind": "biological"
          }
        }
      ],
      "marriages": [
        {
          "marriage": {
            "id": "m_khalid_aisha",
            "spouses": [
              "khalid",
              "aisha"
            ],
            "start": {
              "value": "1975-05-04",
              "precision": "day",
              "circa": false
            }
          },
          "spouse": {
            "id": "aisha",
            "name": "Aisha Al-Rashid",
            "gender": "female",
            "born": {
              "value": "1955-07-11",
              "precision": "day",
              "circa": false
            }
          }
        },
        {
          "marriage": {
            "id": "m_khalid_layla",
            "spouses": [
              "khalid",
              "layla"
            ],
            "start": {
              "value": "1980-09-16",
              "precision": "day",
              "circa": false
            }
          },
          "spouse": {
            "id": "layla",
            "name": "Layla Al-Rashid",
            "gender": "female",
            "born": {
              "value": "1958-02-23",
              "precision": "day",
              "circa": false
            }
          }
        },
        {
          "marriage": {
            "id": "m_khalid_mariam",
            "spouses": [
              "khalid",
              "mariam"
            ],
            "start": {
              "value": "1985-12-28",
              "precision": "day",
              "circa": false
            }
          },
          "spouse": {
            "id": "mariam",
            "name": "Mariam Al-Rashid",
            "gender": "female",
            "born": {
              "value": "1962-10-19",
              "precision": "day",
              "circa": false
            }
          }
        }
      ],
      "children": [
        {
          "person": {
            "id": "yusuf",
            "name": "Yusuf Al-Rashid",
            "gender": "male",
            "born": {
              "value": "1977-06-13",
              "precision": "day",
              "circa": false
            }
          },
          "link": {
            "marriageId": "m_khalid_aisha",
            "childId": "yusuf",
            "kind": "biological"
          }
        },
        {
          "person": {
            "id": "zahra",
            "name": "Zahra Al-Rashid",
            "gender": "female",
            "born": {
              "value": "1982-01-08",
              "precision": "day",
              "circa": false
            }
          },
          "link": {
            "marriageId": "m_khalid_layla",
            "childId": "zahra",
            "kind": "biological"
          }
        },
        {
          "person": {
            "id": "hassan",
            "name": "Hassan Al-Rashid",
            "gender": "male",
            "born": {
              "value": "1987-03-21",
              "precision": "day",
              "circa": false
            }
          },
          "link": {
            "marriageId": "m_khalid_mariam",
            "childId": "hassan",
            "kind": "biological"
          }
        },
        {
          "person": {
            "id": "noor",
            "name": "Noor Al-Rashid",
            "gender": "female",
            "born": {
              "value": "1990-11-07",
              "precision": "day",
              "circa": false
            }
          },
          "link": {
            "marriageId": "m_khalid_mariam",
            "childId": "noor",
            "kind": "biological"
          }
        }
      ]
    }
  ]
}
